--- a/package.json
+++ b/package.json
@@ -31,33 +31,33 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
-        "@nomicfoundation/hardhat-ethers": "^3.0.5",
-        "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+        "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
+        "@nomicfoundation/hardhat-ethers": "^3.0.8",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
         "@nomicfoundation/hardhat-toolbox": "^3.0.0",
         "@nomicfoundation/hardhat-verify": "^1.1.1",
         "@typechain/ethers-v6": "^0.4.3",
         "@typechain/hardhat": "^8.0.3",
-        "@types/chai": "^4.3.11",
+        "@types/chai": "^4.3.19",
         "@types/cli-color": "^2.0.6",
-        "@types/mocha": "^10.0.6",
-        "chai": "^4.4.1",
-        "hardhat": "^2.19.4",
-        "hardhat-gas-reporter": "^1.0.9",
+        "@types/mocha": "^10.0.8",
+        "chai": "^4.5.0",
+        "hardhat": "^2.22.10",
+        "hardhat-deploy": "^0.12.4",
+        "hardhat-gas-reporter": "^1.0.10",
         "prettier": "^2.8.8",
-        "prettier-plugin-solidity": "^1.3.1",
-        "solidity-coverage": "^0.8.6",
+        "prettier-plugin-solidity": "^1.4.1",
+        "solidity-coverage": "^0.8.13",
         "ts-node": "^10.9.2",
         "typechain": "^8.3.2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.6.2"
     },
     "dependencies": {
-        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.4.1",
-        "@openzeppelin/contracts": "^5.0.1",
-        "@types/node": "^20.11.10",
-        "cli-color": "^2.0.3",
-        "dotenv": "^16.4.1",
-        "ethers": "^6.10.0",
-        "hardhat-deploy": "^0.11.45"
+        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.4.2",
+        "@openzeppelin/contracts": "^5.0.2",
+        "@types/node": "^20.16.5",
+        "cli-color": "^2.0.4",
+        "dotenv": "^16.4.5",
+        "ethers": "^6.13.2"
     }
 }
